[Style] fix overflowing on small screens

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,6 +2,7 @@ header {
 	background: linear-gradient(0deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.3) 100%),
 		url(/assets/images/main-bkgd.jpg) lightgray 50% / cover no-repeat;
 	height: 65vh;
+	min-height: 260px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
